--- a/styles.css
+++ b/styles.css
@@ -451,7 +451,7 @@ footer {
     }
 
     .menuSide {
-        width: 250px;
+        width:250px;
         height: 100%;
         background-color: #e9e9e9;
         position: fixed;
@@ -529,18 +529,12 @@ footer {
         border: solid 0.1px #fff;
         width: 100%;
     }
-
-    /* Clases para JS MENU */
-
-.bodyMovimiento{
-    margin-left: 250px;
-
-}
-
-.menuSideMovimiento {
-    width: 250px;
-    margin-left: 250px;
-}
-
-/* Clases para JS MENU */
+    header {
+        width: 100%;
+        background: #000;
+        height: 50px;
+        position: fixed;
+        top: 0;
+        z-index: 2;
+    }
 }
