--- a/styles.css
+++ b/styles.css
@@ -453,15 +453,26 @@ footer {
     }
 
     .menuSide {
-        width:250px;
+        width:150px;
         height: 100%;
         background-color: #e9e9e9;
         position: fixed;
         z-index: 1;
         top:0;
-        left: -250px;
+        left: -150px;
         color: #000;
         font-size: 20px;
+    }
+
+    .bodyMovimiento{
+        left: 0px;
+        transition: all 300ms;
+    }
+
+    .menuSideMovimiento {
+        width: 150px;
+        left: 0px;
+        transition: all 300ms;
     }
 
     .divProyectosTitle {
