--- a/styles.css
+++ b/styles.css
@@ -453,25 +453,25 @@ footer {
     }
 
     .menuSide {
-        width:150px;
+        width:160px;
         height: 100%;
         background-color: #e9e9e9;
         position: fixed;
         z-index: 1;
         top:0;
-        left: -150px;
+        left: -160px;
         color: #000;
         font-size: 20px;
     }
 
     .bodyMovimiento{
-        left: 0px;
+        margin-left: 160px;
         transition: all 300ms;
     }
 
     .menuSideMovimiento {
-        width: 150px;
-        left: 0px;
+        width: 160px;
+        margin-left: 160px;
         transition: all 300ms;
     }
 
